objects/Reporting_Document__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Reporting Documents</relationshipLabel>
        <relationshipName>Reporting_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Admin_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Admin Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Document_Grouping__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Document Grouping</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <label>Document Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CTR</fullName>
                </value>
                <value>
                    <fullName>SAR</fullName>
                </value>
                <value>
                    <fullName>Program Document</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Document_expiration_date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Document expiration date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Reporting Documents</relationshipLabel>
        <relationshipName>Reporting_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Reporting Document</label>
    <listViews>
        <fullName>CTR</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Document_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Document_Type__c</field>
            <operation>equals</operation>
            <value>CTR</value>
        </filters>
        <label>CTR</label>
    </listViews>
    <listViews>
        <fullName>Program_Document</fullName>
        <columns>NAME</columns>
        <columns>Document_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Document_Type__c</field>
            <operation>notEqual</operation>
            <value>SAR</value>
        </filters>
        <filters>
            <field>Document_Type__c</field>
            <operation>notEqual</operation>
            <value>CTR</value>
        </filters>
        <label>Program Document</label>
    </listViews>
    <listViews>
        <fullName>SAR</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Document_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Document_Type__c</field>
            <operation>equals</operation>
            <value>SAR</value>
        </filters>
        <label>SAR</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Reporting Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reporting Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>